--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="container ww-announcement-container">
       <div class="mt-lg-5 mb-md-5 ww-couple-name " data-aos="zoom-in-down">
-        <p class="my_title"> NUESTRA BODA ❤</p>
+        <p class="my_title"> NUESTRA BODA </p>
 <!--        <h1>NUESTRA BODA</h1>-->
       </div>
       <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300"
