--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
     </div>
   </div>
 </div>
-<div class="ww-nav-bar sticky-top bg-light">
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container"><a href="#"><svg class="heart" viewBox="0 0 32 29.6"><path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
-</svg></a>
-      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Wonderful Wedding</a></h1>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</div>
+<!--<div class="ww-nav-bar sticky-top bg-light">-->
+<!--  <nav class="navbar navbar-expand-lg navbar-light">-->
+<!--    <div class="container"><a href="#"><svg class="heart" viewBox="0 0 32 29.6"><path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>-->
+<!--    </svg></a>-->
+<!--      <h1 class="h2"><a class="pl-4 navbar-brand" href="#">Wonderful Wedding</a></h1>-->
+<!--      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>-->
+<!--      <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">-->
+<!--        <ul class="navbar-nav ml-auto">-->
+<!--          <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>-->
+<!--          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>-->
+<!--          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>-->
+<!--          <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>-->
+<!--          <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>-->
+<!--          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </nav>-->
+<!--</div>-->
 <div class="ww-section" id="couple">
   <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Nuestra historia</h2>
     <div class="row text-center">
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
@@ -99,11 +99,11 @@
 </div>
 <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Events</h2>
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Dónde y Cuándo</h2>
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
-          <div class="h4">Wedding Party</div>
+          <div class="h4">Iglesia Cristo Rey</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Church End, Hendon, London, UK</span></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">20 Dec 2018, 9AM - 6PM</span></li>
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
-          <div class="h4">Reception</div>
+          <div class="h4">Salón Almendro</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">City Place, Hendon, London, UK</span></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">22 Dec 2018, 11AM - 6PM</span></li>
@@ -134,7 +134,7 @@
 </div>
 <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
-    <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groomsmen & Bridesmaids</h2>
+    <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Padrinos de Velación</h2>
     <div class="carousel slide" id="ww-carouselIndicator" data-ride="carousel" data-aos="zoom-in-up" data-aos-duration="1000">
       <ol class="carousel-indicators">
         <li class="active" data-target="#ww-carouselIndicator" data-slide-to="0"></li>
@@ -216,7 +216,7 @@
 <div class="ww-section bg-light" id="gallery">
   <div class="ww-photo-gallery">
     <div class="container">
-      <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Photo Gallery</h2>
+      <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Galeria de Fotos</h2>
       <div class="col-md-12 text-center ww-category-filter mb-4"><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="all">All</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="vacation">Our Vacation</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="party">Party</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="ceremony">Ceremony</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="wedding">Wedding</a></div>
       <div class="ww-gallery" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="0">
         <div class="card-columns">
@@ -236,45 +236,30 @@
 <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
   <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
     <div class="col text-center">
-      <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Join Our Party</h2>
+      <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Confirmar asistencia </h2>
     </div>
     <div class="row ww-rsvp-form">
-      <div class="col-md-10">
+      <div class="col-md-8">
         <div class="card-body">
           <form action="https://formspree.io/example@email.com" method="POST">
             <div class="row">
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="name-input">Your Name*</label>
+                  <label for="name-input">Nombre</label>
                   <input class="form-control" id="name-input" type="text" name="name" required="required"/>
                 </div>
               </div>
-              <div class="col-md-6 pb-3">
-                <div class="form-group">
-                  <label for="email-input">Your Email*</label>
-                  <input class="form-control" id="email-input" type="email" name="_replyto" required="required"/>
-                </div>
-              </div>
+
             </div>
             <div class="row">
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Number of Guests</label>
+                  <label for="guest-input">Numero de personas confirmadas</label>
                   <select class="form-control" id="guest-input" name="guest">
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
+                    <option value="1">Uno</option>
+                    <option value="2">Dos</option>
                     <option value="3">Three</option>
                     <option value="4">Four</option>
-                  </select>
-                </div>
-              </div>
-              <div class="col-md-6 pb-3">
-                <div class="form-group">
-                  <label for="events-input">I am Attending</label>
-                  <select class="form-control" id="events-input" name="events">
-                    <option value="all-event">All Events</option>
-                    <option value="wedding-ceremony">Wedding ceremony</option>
-                    <option value="reception-party">Reception Party</option>
                   </select>
                 </div>
               </div>
@@ -282,7 +267,7 @@
             <div class="row">
               <div class="col">
                 <div class="form-group">
-                  <label for="message-input">Your Message</label>
+                  <label for="message-input">Nombres de quien asisten</label>
                   <textarea class="form-control" id="message-input" name="message" rows="4"></textarea>
                 </div>
               </div>
