--- a/index.html
+++ b/index.html
@@ -78,21 +78,25 @@
 <!--</div>-->
 <div class="ww-section" id="couple">
   <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Nuestra historia</h2>
-    <div class="row text-center">
-      <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
-          <p class="pt-3 text-left text-muted">Hi I am Raymond,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Raymond</h3>
-          <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-        </div>
+    <h1 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Nuestra historia</h1>
+    <div class="row d-flex align-items-center justify-content-center pb-4">
+      <div class="col-md-8 col-sm-10">
+        <p class="text-center my_text text-muted" data-aos="zoom-in-down"> Nuestra historia comienza un 18 de febrero del 2016 en una fiesta de una amiga en común, nos presentaron, empezamos a salir y finalmente nos convertimos en novios un 8 de mayo del mismo año. Hoy les anunciamos nuestro próximo matrimonio.</p>
       </div>
-      <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/bride.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
-          <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Susan</h3>
-          <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-        </div>
+    </div>
+    <div class="row text-center pt-3">
+      <div class="col-md-4 mt-4">
+        <h3 class="h2 ww-title">Antonia Cervantes Guerrero</h3>
+        <p class="pt-3 text-md-right text-sm-center text-muted">Lo que más me gusta de Raúl es su honestidad y romanticismo. Es una persona increíble y cada día me enamoro más de el. Me sorprende constantemente y es mi compañía y apoyo en cada cosa que realizo.</p>
+        <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+      </div>
+      <div class="col-md-4">
+        <img class="img-fluid w-100 shadow-lg rounded-circle" src="images/boda/raulyantonia.jpg" style="max-width: 275px;" alt="raul_antonia" data-aos="flip-left" data-aos-duration="1000"/>
+      </div>
+      <div class="col-md-4 mt-4">
+        <h3 class="h2 ww-title">Raúl Escobedo Ortiz</h3>
+        <p class="pt-3 text-md-left text-sm-center text-muted">Gracias a Antonia mi vida cambio completamente. Me hace muy feliz y saca la mejor versión de mi. Es mi compañera ideal, me comprende y me brinda mucha paz. Gracias por no dudar y darme el si.</p>
+        <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
       </div>
     </div>
   </div>
@@ -101,33 +105,37 @@
   <div class="container ww-wedding-event">
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Dónde y Cuándo</h2>
     <div class="row">
-      <div class="col-md-7 col-sm-12">
-        <div class="my-3">
-          <div class="h4">Iglesia Cristo Rey</div>
-          <ul>
-            <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Church End, Hendon, London, UK</span></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">20 Dec 2018, 9AM - 6PM</span></li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3" data-aos="fade-down-right" data-aos-duration="1000">
+        <div class="shadow-lg p-2 rounded-lg">
+          <div class="p-3 shadow-lg rounded-lg">
+            <div class="h4 ww-title text-center">Ceremonia Religiosa</div>
+            <div class="h4">Iglesia Cátolica Cristo Rey</div>
+            <ul>
+              <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Av Ferrocarril 307, Felipe Ángeles, Tulancingo, Hgo</span></li>
+              <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">17 Feb 2024, 1PM - 2PM</span></li>
+              <a href="https://maps.app.goo.gl/WHXsKL2evPcwomYT8" target=”_blank”> https://maps.app.goo.gl/WHXsKL2evPcwomYT8 </a>
+            </ul>
+            <div class="row d-flex align-items-center justify-content-center">
+              <img class="img-fluid rounded-lg w-100" style="max-width: 225px;" src="images/boda/church.jpg" alt="Wedding Party"/>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/wedding-party.jpg" alt="Wedding Party" data-aos="fade-down-right" data-aos-duration="1000"/></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-7 col-sm-12">
-        <div class="my-3">
-          <div class="h4">Salón Almendro</div>
-          <ul>
-            <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">City Place, Hendon, London, UK</span></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">22 Dec 2018, 11AM - 6PM</span></li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3"  data-aos="fade-up-right" data-aos-duration="1000">
+        <div class="shadow-lg p-2 rounded-lg">
+          <div class="p-3 shadow-lg rounded-lg">
+            <div class="h4 ww-title text-center">La Fiesta</div>
+            <div class="h4">Salón El Almendro</div>
+            <ul>
+              <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Camino a San Dionisio S/N, 43540 Acatlán, Hgo.</span></li>
+              <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">17 Feb 2024, 2:30 PM</span></li>
+              <a href="https://maps.app.goo.gl/CyqJRTZQkdg88K6S7" target="_blank">https://maps.app.goo.gl/CyqJRTZQkdg88K6S7</a>
+            </ul>
+            <div class="row d-flex align-items-center justify-content-center">
+              <img class="img-fluid w-100 rounded-lg" style="max-width: 225px;" src="images/boda/almendro.jpg" alt="Reception"/>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/reception.jpg" alt="Reception" data-aos="fade-up-right" data-aos-duration="1000"/></div>
       </div>
     </div>
   </div>
