padrinos de arras y velacion

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--        <h1>NUESTRA BODA</h1>-->
       </div>
       <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300"
-         data-aos-duration="1000">Raúl & Antonia</p>
+         data-aos-duration="1000">Antonia & Raúl </p>
       <img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
@@ -76,6 +76,8 @@
 <!--    </div>-->
 <!--  </nav>-->
 <!--</div>-->
+<!--        lo que dios unio no lo separe el hombre-->
+
 <div class="ww-section" id="couple">
   <div class="container">
     <h1 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Nuestra historia</h1>
@@ -106,8 +108,8 @@
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Dónde y Cuándo</h2>
     <div class="row">
       <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3" data-aos="fade-down-right" data-aos-duration="1000">
-        <div class="shadow-lg p-2 rounded-lg">
-          <div class="p-3 shadow-lg rounded-lg">
+        <div class="shadow-sm p-2 rounded-lg">
+          <div class="p-3 rounded-lg">
             <div class="h4 ww-title text-center">Ceremonia Religiosa</div>
             <div class="h4">Iglesia Cátolica Cristo Rey</div>
             <ul>
@@ -122,8 +124,8 @@
         </div>
       </div>
       <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3"  data-aos="fade-up-right" data-aos-duration="1000">
-        <div class="shadow-lg p-2 rounded-lg">
-          <div class="p-3 shadow-lg rounded-lg">
+        <div class="shadow-sm p-2 rounded-lg">
+          <div class="p-3 rounded-lg">
             <div class="h4 ww-title text-center">La Fiesta</div>
             <div class="h4">Salón El Almendro</div>
             <ul>
@@ -141,80 +143,37 @@
   </div>
 </div>
 <div class="ww-section" id="people">
-  <div class="container ww-couple-friends">
-    <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Padrinos de Velación</h2>
-    <div class="carousel slide" id="ww-carouselIndicator" data-ride="carousel" data-aos="zoom-in-up" data-aos-duration="1000">
-      <ol class="carousel-indicators">
-        <li class="active" data-target="#ww-carouselIndicator" data-slide-to="0"></li>
-        <li data-target="#ww-carouselIndicator" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-1.jpg" alt="Groom Men 1"/>
-                <div class="card-body text-center">
-                  <div class="h5">Bryan Berry</div>
-                  <p class="mb-0 text-muted">Best Friend</p>
-                  <p class="text-muted">Groomsmen</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-2.jpg" alt="Groom Men 2"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Kevin Johnston</div>
-                  <p class="mb-0 text-muted">Room Mate</p>
-                  <p class="text-muted">Groomsmen</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/groom-men-3.jpg" alt="Groom Men 3"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Arthur Wright</div>
-                  <p class="mb-0 text-muted">Friend</p>
-                  <p class="text-muted">Groomsmen</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
+  <div class="container ww-couple-friends ">
+    <div class="p-3 shadow-lg rounded-lg">
+      <h2 class="h1 text-center pt-3 ww-title" data-aos="fade-up-right" data-aos-duration="1000">Padrinos de Velación</h2>
+      <div class="row">
+        <div class="col-md-6 col-sm-12" data-aos="flip-left" data-aos-duration="1000">
+          <div class="row d-flex align-items-center justify-content-center">
+            <img class="img-fluid w-100 rounded-lg rounded-circle" style="max-width: 225px;" src="images/boda/velacion.jpg" alt="Reception"/>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-1.jpg" alt="Bride Maid 1"/>
-                <div class="card-body text-center">
-                  <div class="h5">Rachel Lawson</div>
-                  <p class="mb-0 text-muted">Best Friend</p>
-                  <p class="text-muted">Bridesmaids</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-2.jpg" alt="Bride Maid 2"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Betty George</div>
-                  <p class="mb-0 text-muted">Room Mate</p>
-                  <p class="text-muted">Bridesmaids</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card d-block mb-3"><img class="card-img-top" src="images/bride-maid-3.jpg" alt="Bride Maid 3"/>
-                <div class="card-body text-center">
-                  <div class="h5 text-center">Emma Snyder</div>
-                  <p class="mb-0 text-muted">Friend</p>
-                  <p class="text-muted">Bridesmaids</p>
-                  <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
-                </div>
-              </div>
-            </div>
+        <div class="col-md-6 col-sm-12 mt-5" data-aos="fade-down-right" data-aos-duration="1000">
+          <div class="d-flex align-items-center justify-content-center">
+            <h1 class="h1 text-center ww-title "> Saúl Escobedo</h1>
+            <h1 class="h1 text-center ww-title "> Y</h1>
+            <h1 class="text-center ww-title" > Paulina Sánchez</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container ww-couple-friends pt-5">
+    <div class="p-3 shadow-lg rounded-lg">
+      <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Padrino de Arras</h2>
+      <div class="row">
+        <div class="col-md-6 col-sm-12" data-aos="flip-right" data-aos-duration="1000">
+          <div class="row d-flex align-items-center justify-content-center">
+            <img class="img-fluid w-100 rounded-lg rounded-circle" style="max-width: 225px;" src="images/boda/arras2.jpg" alt="Reception"/>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12 mt-5" data-aos="fade-down-right" data-aos-duration="1000">
+          <div class="d-flex align-items-center justify-content-center">
+            <h1 class="h1 text-center ww-title "> Sr. Fernando Guerrero</h1>
           </div>
         </div>
       </div>
