--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <p class="my_title"> NUESTRA BODA </p>
 <!--        <h1>NUESTRA BODA</h1>-->
       </div>
-      <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300"
+      <p class="ww-couple-name ww_my_title_" data-aos="zoom-in-down" data-aos-delay="300"
          data-aos-duration="1000">Antonia & Raúl </p>
-      <img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
+      <img class="img-fluid mt-1 " style="max-width: 275px;" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
          data-aos-offset="10" >17|Feb|2024</p>
       <div class="simply-countdown simply-countdown-one shadow-lg rounded-lg" data-aos="zoom-in-down"
-           data-aos-delay="400"></div>
+           data-aos-delay="100"></div>
     </div>
   </div>
 </div>
