--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <p class="ww-couple-name ww_my_title_" data-aos="zoom-in-down" data-aos-delay="300"
          data-aos-duration="1000">Antonia & Raúl </p>
-      <img class="img-fluid mt-1 " style="max-width: 275px;" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
+      <img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
          data-aos-offset="10" >17|Feb|2024</p>
