cambio en la imagen 4

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--        <h1>NUESTRA BODA</h1>-->
       </div>
       <p class="ww-couple-name ww_my_title_" data-aos="zoom-in-down" data-aos-delay="300"
-         data-aos-duration="1000">Antonia & Raúl </p>
+         data-aos-duration="1000">Antonia <strong class="ww-title">&</strong> Raúl </p>
       <img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
