cambio en la imagen 5

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <p class="my_title"> NUESTRA BODA </p>
 <!--        <h1>NUESTRA BODA</h1>-->
       </div>
-      <p class="ww-couple-name ww_my_title_" data-aos="zoom-in-down" data-aos-delay="300"
-         data-aos-duration="1000">Antonia <strong class="ww-title">&</strong> Raúl </p>
+     <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">
+      <span class="ww_my_title_">Antonia </span> <span class="ww-title">&</span> <span class="ww_my_title_"> Raúl</span>
+      </p>
       <img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
