--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
 
     <div class="container ww-announcement-container">
-      <div class="mt-lg-5 mb-md-5 ww-couple-name " data-aos="zoom-in-down">
-        <p class="my_title"> NUESTRA BODA </p>
+      <div class="mt-lg-5 mb-md-5 ww-couple-name" data-aos="zoom-in-down">
+        <p class="ww_my_wedding"> NUESTRA BODA </p>
 <!--        <h1>NUESTRA BODA</h1>-->
       </div>
      <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">
