cambio en el texto nuestra oda 9

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
          data-aos-offset="10" >17|Feb|2024</p>
-      <div class="simply-countdown simply-countdown-one shadow-lg rounded-lg" data-aos="zoom-in-down"
-           data-aos-delay="100"></div>
+      <div class="simply-countdown simply-countdown-one shadow-lg rounded-lg"></div>
     </div>
   </div>
 </div>
