--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
      <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">
       <span class="ww_my_title_">Antonia </span> <span class="ww-title">&</span> <span class="ww_my_title_"> Raúl</span>
       </p>
-      <img class="img-fluid mt-1" src="images/laurel-2.png" alt="Heart" data-aos="zoom-in-down"
+      <div class="hei"></div>
+      <img class="img-fluid mt-1" src="images/laurel-3.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
       <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
          data-aos-offset="10" >17|Feb|2024</p>
