final commit almost complete

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     </noscript>
   </head>
   <body id="top">
-    <header></header>
-    <div class="page-content">
-      <div class="div">
+    <header>
+    </header>
+<div class="page-content">
+<div class="div">
 <div class="ww-home-page" id="home">
   <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
 
@@ -50,9 +51,9 @@
       <span class="ww_my_title_">Antonia </span> <span class="ww-title">&</span> <span class="ww_my_title_"> Raúl</span>
       </p>
       <div class="hei"></div>
-      <img class="img-fluid mt-1" src="images/laurel-3.png" alt="Heart" data-aos="zoom-in-down"
+      <img class="img-fluid mt-1" src="images/laurel-2.png" alt="Heart" data-aos="zoom-in-down"
            data-aos-delay="300" data-aos-duration="1000"/>
-      <p class="h1 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
+      <p class="h1 mt-5 ww-title ww_my_date" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"
          data-aos-offset="10" >17|Feb|2024</p>
       <div class="simply-countdown simply-countdown-one shadow-lg rounded-lg"></div>
     </div>
@@ -107,16 +108,20 @@
 <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Dónde y Cuándo</h2>
-    <div class="row">
-      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3" data-aos="fade-down-right" data-aos-duration="1000">
-        <div class="shadow-sm p-2 rounded-lg">
-          <div class="p-3 rounded-lg">
+    <div class="row ">
+      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3 " data-aos="fade-down-right" data-aos-duration="1000">
+        <div class="shadow-lg p-2 rounded-lg">
+          <div class="p-3 rounded-lg shadow-lg">
             <div class="h4 ww-title text-center">Ceremonia Religiosa</div>
             <div class="h4">Iglesia Cátolica Cristo Rey</div>
             <ul>
               <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Av Ferrocarril 307, Felipe Ángeles, Tulancingo, Hgo</span></li>
               <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">17 Feb 2024, 1PM - 2PM</span></li>
-              <a href="https://maps.app.goo.gl/WHXsKL2evPcwomYT8" target=”_blank”> https://maps.app.goo.gl/WHXsKL2evPcwomYT8 </a>
+              <li class="d-flex justify-content-center align-items-center">
+                <a class="p-0 m-0 " target="_blank" href="https://maps.app.goo.gl/WHXsKL2evPcwomYT8">
+                  <button type="button" class="btn btn-success mt-2"> Ver ubicación</button>
+                </a>
+              </li>
             </ul>
             <div class="row d-flex align-items-center justify-content-center">
               <img class="img-fluid rounded-lg w-100" style="max-width: 225px;" src="images/boda/church.jpg" alt="Wedding Party"/>
@@ -124,15 +129,19 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3"  data-aos="fade-up-right" data-aos-duration="1000">
-        <div class="shadow-sm p-2 rounded-lg">
-          <div class="p-3 rounded-lg">
+      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3   "  data-aos="fade-up-right" data-aos-duration="1000">
+        <div class="shadow-lg p-2 rounded-lg">
+          <div class="p-3 rounded-lg shadow-lg">
             <div class="h4 ww-title text-center">La Fiesta</div>
             <div class="h4">Salón El Almendro</div>
             <ul>
               <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Camino a San Dionisio S/N, 43540 Acatlán, Hgo.</span></li>
               <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">17 Feb 2024, 2:30 PM</span></li>
-              <a href="https://maps.app.goo.gl/CyqJRTZQkdg88K6S7" target="_blank">https://maps.app.goo.gl/CyqJRTZQkdg88K6S7</a>
+              <li class="d-flex justify-content-center align-items-center">
+                <a class="p-0 m-0" target="_blank" href="https://maps.app.goo.gl/CyqJRTZQkdg88K6S7">
+                  <button type="button" class="btn btn-info mt-2"> Ver ubicación</button>
+                </a>
+              </li>
             </ul>
             <div class="row d-flex align-items-center justify-content-center">
               <img class="img-fluid w-100 rounded-lg" style="max-width: 225px;" src="images/boda/almendro.jpg" alt="Reception"/>
@@ -144,18 +153,18 @@
   </div>
 </div>
 <div class="ww-section" id="people">
-  <div class="container ww-couple-friends ">
+  <div class="container ww-couple-friends shadow-sm rounded-lg">
     <div class="p-3 shadow-lg rounded-lg">
       <h2 class="h1 text-center pt-3 ww-title" data-aos="fade-up-right" data-aos-duration="1000">Padrinos de Velación</h2>
       <div class="row">
         <div class="col-md-6 col-sm-12" data-aos="flip-left" data-aos-duration="1000">
           <div class="row d-flex align-items-center justify-content-center">
-            <img class="img-fluid w-100 rounded-lg rounded-circle" style="max-width: 225px;" src="images/boda/velacion.jpg" alt="Reception"/>
+            <img class="img-fluid w-100 rounded-lg rounded-circle " style="max-width: 225px;" src="images/boda/velacion.jpg" alt="Reception"/>
           </div>
         </div>
         <div class="col-md-6 col-sm-12 mt-5" data-aos="fade-down-right" data-aos-duration="1000">
-          <div class="d-flex align-items-center justify-content-center">
-            <h1 class="h1 text-center ww-title "> Saúl Escobedo</h1>
+          <div class=" align-items-center justify-content-center">
+            <h1 class="h1 text-center ww-title "> Saúl Escobedo</h1><br>
             <h1 class="h1 text-center ww-title "> Y</h1>
             <h1 class="text-center ww-title" > Paulina Sánchez</h1>
           </div>
@@ -163,9 +172,9 @@
       </div>
     </div>
   </div>
-  <div class="container ww-couple-friends pt-5">
+  <div class="container ww-couple-friends mt-5 shadow-sm rounded-lg">
     <div class="p-3 shadow-lg rounded-lg">
-      <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Padrino de Arras</h2>
+      <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Padrinos de Arras</h2>
       <div class="row">
         <div class="col-md-6 col-sm-12" data-aos="flip-right" data-aos-duration="1000">
           <div class="row d-flex align-items-center justify-content-center">
@@ -173,29 +182,69 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-12 mt-5" data-aos="fade-down-right" data-aos-duration="1000">
-          <div class="d-flex align-items-center justify-content-center">
+          <div class=" align-items-center justify-content-center">
             <h1 class="h1 text-center ww-title "> Sr. Fernando Guerrero</h1>
+            <h1 class="h1 text-center ww-title "> Y </h1>
+            <h1 class="h1 text-center ww-title "> Sra. Petra García</h1>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="ww-section bg-light" id="gallery">
+  <div class="ww-section bg-light" id="hospedaje">
+    <div class="container ww-wedding-event">
+      <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Hospedaje</h2>
+      <div class="row">
+        <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3 " data-aos="fade-down-right" data-aos-duration="1000">
+          <div class="shadow-lg p-2 rounded-lg">
+            <div class="p-3 rounded-lg shadow-lg">
+              <div class="h4 ww-title text-center">Hotel</div>
+              <div class="h4">Finca del Pomar</div>
+              <ul>
+                <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Av. Juarez #6 Loc. Chautenco, 43540 Acatlán, Hgo</span></li>
+                <li class="pt-2"><i class="text-muted fas fa-phone"></i><span class="pl-2 text-muted">775 166 7815</span></li>
+                <li class="pt-2"><i class="text-muted fas fa-dollar-sign"></i><span class="pl-2 text-muted">1,044 MXN</span></li>
+                <li class="d-flex justify-content-center align-items-center">
+                  <a class="p-0 m-0 mx-2" target="_blank" href="https://maps.app.goo.gl/2TpjZQHGAJa2tPtNA">
+                    <button type="button" class="btn btn-success mt-2"> Ver ubicación</button>
+                  </a>
+                  <a class="p-0 m-0 " target="_blank" href="https://www.google.com/travel/search?g2lb=2502548,2503771,2503781,4258168,4284970,4291517,4597339,4757164,4814050,4874190,4893075,4899571,4899573,4924070,4965990,4990494,72277293,72280816,72298667,72302247,72317059,72385362,72402232,72406588,72412680,72414906,72435354,72435359,72440516,72442338&hl=es-419&gl=mx&ssta=1&q=finca+del+pomar+hotel&ts=CAEaRwopEicyJTB4ODVkMGZmZTg4ODg1MDk0NzoweGVhMjJmYzk5NDgyYTk2MjkSGhIUCgcI5w8QCxgeEgcI5w8QDBgBGAEyAhAA&qs=CAEyFENnc0lxYXlxd1pTVHY1SHFBUkFCOAJCCQkplipImfwi6kIJCSmWKkiZ_CLq&ap=ugEGcHJpY2Vz&ictx=1&ved=2ahUKEwjJ69W22uyCAxW7nWoFHW_kC9cQrK0LKAB6BAgrEAE">
+                    <button type="button" class="btn btn-info mt-2"> Reservar </button>
+                  </a>
+                </li>
+              </ul>
+              <div class="row d-flex align-items-center justify-content-center">
+                <img class="img-fluid rounded-lg w-100" style="max-width: 250px;" src="images/hotel/pomar.jpg" alt="Wedding Party"/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="ww-section " id="gallery">
   <div class="ww-photo-gallery">
     <div class="container">
       <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Galeria de Fotos</h2>
-      <div class="col-md-12 text-center ww-category-filter mb-4"><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="all">All</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="vacation">Our Vacation</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="party">Party</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="ceremony">Ceremony</a><a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="wedding">Wedding</a></div>
+      <div class="col-md-12 text-center ww-category-filter mb-4"> </div>
       <div class="ww-gallery" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="0">
         <div class="card-columns">
-          <div class="card" data-groups="[&quot;vacation&quot;,&quot;ceremony&quot;]"><a href="images/gallery-pic-1.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-1.jpg" alt="Gallery Pic 1"/></a></div>
-          <div class="card" data-groups="[&quot;party&quot;,&quot;wedding&quot;]"><a href="images/gallery-pic-2.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-2.jpg" alt="Gallery Pic 2"/></a></div>
-          <div class="card" data-groups="[&quot;vacation&quot;]"><a href="images/gallery-pic-3.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-3.jpg" alt="Gallery Pic 3"/></a></div>
-          <div class="card" data-groups="[&quot;party&quot;,&quot;vacation&quot;]"><a href="images/gallery-pic-4.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-4.jpg" alt="Gallery Pic 4"/></a></div>
-          <div class="card" data-groups="[&quot;vacation&quot;]"><a href="images/gallery-pic-5.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-5.jpg" alt="Gallery Pic 5"/></a></div>
-          <div class="card" data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]"><a href="images/gallery-pic-6.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-6.jpg" alt="Gallery Pic 6"/></a></div>
-          <div class="card" data-groups="[&quot;vacation&quot;]"><a href="images/gallery-pic-7.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-7.jpg" alt="Gallery Pic 7"/></a></div>
-          <div class="card" data-groups="[&quot;wedding&quot;,&quot;party&quot;]"><a href="images/gallery-pic-8.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery-pic-8.jpg" alt="Gallery Pic 8"/></a></div>
+          <div class="card">
+            <a href="images/boda/pic1.jpg" data-toggle="lightbox" data-gallery="ww-gallery">
+              <img class="img-fluid rounded-lg"  src="images/boda/pic1.jpg" alt="Gallery Pic 1"/>
+            </a>
+          </div>
+          <div class="card">
+            <a href="images/boda/pic3.jpg" data-toggle="lightbox" data-gallery="ww-gallery">
+              <img class="img-fluid rounded-lg"  src="images/boda/pic3.jpg" alt="Gallery Pic 1"/>
+            </a>
+          </div>
+          <div class="card">
+            <a href="images/boda/pic2.jpg" data-toggle="lightbox" data-gallery="ww-gallery">
+              <img class="img-fluid rounded-lg"  src="images/boda/pic2.jpg" alt="Gallery Pic 1"/>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -226,8 +275,9 @@
                   <select class="form-control" id="guest-input" name="guest">
                     <option value="1">Uno</option>
                     <option value="2">Dos</option>
-                    <option value="3">Three</option>
-                    <option value="4">Four</option>
+                    <option value="3">Tres</option>
+                    <option value="4">Cuatro</option>
+                    <option value="4">Cinco o más</option>
                   </select>
                 </div>
               </div>
@@ -242,7 +292,7 @@
             </div>
             <div class="row">
               <div class="col text-center">
-                <button class="btn btn-primary btn-submit" type="submit">Send</button>
+                <button class="btn btn-primary btn-submit" type="submit">Enviar</button>
               </div>
             </div>
           </form>
@@ -254,17 +304,24 @@
 <div class="ww-footer bg-light">
   <div class="container text-center py-4">
     <p class="my-0">&copy; Wonderful Wedding. All rights reserved.</p>
-    <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
+    <p class="mb-0">Deseño y Creación por - <a class="credit" href="https://ederportfolio.c1.is/" target="_blank">Ing. Eder Escobedo • 7751905138 • ing.eder.esc@gmail.com</a></p>
   </div>
 </div></div>
     </div>
     <footer></footer>
-    <script src="scripts/jquery.min.js?ver=1.1.0"></script>
+    <audio id="background-music" autoplay loop>
+      <source src="/music/music.mp3" type="audio/mp3">
+    </audio>
+    <div id="mute-icon" onclick="toggleMute()">
+      <img id="mute-img" src="/music/play.png" alt="Mute/Unmute Icon" style="max-width: 55px;">
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="  crossorigin="anonymous"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
     <script src="scripts/aos.js?ver=1.1.0"></script>
     <script src="scripts/ekko-lightbox.min.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
     <script src="scripts/simplyCountdown.min.js"></script>
     <script src="scripts/simply_count.js" ></script>
+    <script src="scripts/music.js" ></script>
   </body>
 </html>
