--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="container ww-wedding-event">
       <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Hospedaje</h2>
       <div class="row">
-        <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center pt-3 " data-aos="fade-down-right" data-aos-duration="1000">
+        <div class="col-md-12 col-sm-12 d-flex justify-content-center align-items-center pt-3 " data-aos="fade-down-right" data-aos-duration="1000">
           <div class="shadow-lg p-2 rounded-lg">
             <div class="p-3 rounded-lg shadow-lg">
               <div class="h4 ww-title text-center">Hotel</div>
@@ -205,6 +205,7 @@
                 <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Av. Juarez #6 Loc. Chautenco, 43540 Acatlán, Hgo</span></li>
                 <li class="pt-2"><i class="text-muted fas fa-phone"></i><span class="pl-2 text-muted">775 166 7815</span></li>
                 <li class="pt-2"><i class="text-muted fas fa-dollar-sign"></i><span class="pl-2 text-muted">1,044 MXN</span></li>
+                <li class="pt-2"><i class="text-muted fas fa-car"></i><span class="pl-2 text-muted">10 Min (Salón Almendro - Hotel Pomar)</span></li>
                 <li class="d-flex justify-content-center align-items-center">
                   <a class="p-0 m-0 mx-2" target="_blank" href="https://maps.app.goo.gl/2TpjZQHGAJa2tPtNA">
                     <button type="button" class="btn btn-success mt-2"> Ver ubicación</button>
