last commited changes 3

--- a/index.html
+++ b/index.html
@@ -312,12 +312,14 @@
     <p class="my-0">&copy; Wonderful Wedding. All rights reserved.</p>
     <p class="mb-0">Deseño y Creación por - <a class="credit" href="https://ederportfolio.c1.is/" target="_blank">Ing. Eder Escobedo • 7751905138 • ing.eder.esc@gmail.com</a></p>
   </div>
+  <div class="container text-center py-4">
+    <audio class="hidden" id="background-music" controls autoplay loop>
+      <source src="/music/music.mp3" type="audio/mp3">
+    </audio>
+  </div>
 </div></div>
     </div>
     <footer></footer>
-    <audio id="background-music" autoplay loop>
-      <source src="/music/music.mp3" type="audio/mp3">
-    </audio>
     <div id="mute-icon" onclick="toggleMute()">
       <img id="mute-img" src="/music/mute.svg" alt="Mute/Unmute Icon" style="max-width: 55px;">
     </div>
