--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <p class="mb-0">Deseño y Creación por - <a class="credit" href="https://ederportfolio.c1.is/" target="_blank">Ing. Eder Escobedo • 7751905138 • ing.eder.esc@gmail.com</a></p>
   </div>
   <div class="container text-center py-4">
-    <audio class="hidden" id="background-music" controls autoplay loop>
+    <audio id="background-music" controls autoplay loop>
       <source src="/music/music.mp3" type="audio/mp3">
     </audio>
   </div>
